# tix

./: Cargo.toml  Dioxus.toml  docker-compose.yml  package.json  tailwind.config.js
crates/qr-scanner/: Cargo.toml
crates/qr-scanner/src/: lib.rs
public/: tailwind.css
src/: main.rs
src/components/: mod.rs  scanner.rs  ticket.rs
tix-api/: .dockerignore  Cargo.toml  Dockerfile  fly.toml
tix-api/.sqlx/: query-1cde3c03cd3dcbabf88853a96d2087f2ca9d3b238c492029ef7df45e3715b6d3.json  query-2087a8bc3b453a34a654ec9ebf1a6773f0b1463beb0dd3fa4c6a722529086dbc.json  query-2add7a80a2c25e989c4e33c31a50085ce4c47bd4c84bb6dcb1211549f7498aad.json  query-3bf32c4baffeb89716d83a3e1c37a2665a2d01b051001e7d575e55158e7c1182.json  query-3ee3d7433863b63c0ae5b83bb5d42ecee4f5bdf7eecd7880a60086208144c7eb.json  query-3faaec4d9914ca1f2dea38988679f03a61633915e956c1cc997c6207e9dbc31c.json  query-5a0198b2f168f016e56c46eb4d17292f780f1d519627cb4f7b56ad268353c575.json  query-5e7c27f190a78651814eb730d006cf4f529066e3fdcd148469bd7d31a86f21ec.json  query-81a7213e64512e482d77b101df1251475acfa1b0e9b74828dc5c096d048118ec.json  query-872b54589db30f7a7785d938d73e4ed8d69937ac3fed315f881a009b6eb64c02.json  query-b9379242a328da14ffa1f73b167d3efd2864e1ef0ae656765badea3247a64ec6.json  query-c1730cc36f21c44265f74a9fdfd00b06605d337aafa0a418e44f9be63c27e94a.json  query-c9322562827732c2b255c9a879f66c4624ada9edf85adfb8456569a601ea7907.json  query-d27aa38ab0f9e14b7e4238f612f8081c1c7f2d4e76cf896a07f41bd45eb98be0.json  query-db164be2e06bcda84660654f7ef518be9a4ec662c3fef55e39b462424e0f2fee.json  query-db467ced609536a237a4bb49d392c71a3feb2cf15ee634792c976a393bd0e5cc.json  query-ea8d67d8e9754dc28085fd8a4295957bda6246379fa62502c5bb774974562680.json  query-ecf344c50257470a15b80909610cfa2b82e96248515f7770b184db5e19149908.json  query-f85be0ada38e11bd6e110553ba4ad5e42c238adfcd2f81d8cd671f976d9a14bc.json  query-f91d2e3b736a9eb2847ea8b5b401b9797ff9abed61ccff29b36f67bb14d1af63.json
tix-api/migrations/: 20240104115421_init.down.sql  20240104115421_init.up.sql  20240207170530_validation.down.sql  20240207170530_validation.up.sql  20240209165403_emailed_at.down.sql  20240209165403_emailed_at.up.sql
tix-api/src/: email.rs  error.rs  lib.rs  main.rs  oidc.rs  order.rs  swish.rs
tix-api/src/routes/: auth.rs  mod.rs  orders.rs  tickets.rs
tix-frontend/: .eslintrc.json  package.json  tailwind.config.ts
tix-frontend/src/app/: layout.tsx  page.tsx
tix-frontend/src/app/admin/: layout.tsx  page.tsx
tix-frontend/src/app/admin/orders/: page.tsx
tix-frontend/src/app/admin/tickets/: page.tsx
tix-frontend/src/app/api/qr/: route.ts
tix-frontend/src/app/checkout/: page.tsx
tix-frontend/src/app/tickets/: page.tsx
tix-frontend/src/components/: Button.tsx  Checkout.tsx  Modal.tsx  OrderForm.tsx  OrderView.tsx  PaymentRequest.tsx  QueryClientProvider.tsx  SavedTicketsButton.tsx  SwishQr.tsx  Ticket.tsx  TicketRecovery.tsx  TicketView.tsx  Tickets.tsx  TimeSince.tsx  auth.tsx  queryClient.ts
tix-frontend/src/components/admin/: Nav.tsx  Orders.tsx  ScanResult.tsx  Scanner.tsx  SwishImport.tsx
tix-frontend/src/lib/: api.ts  hooks.ts  state.ts
