[package]
name = "tix"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "crates/*"]

[workspace.dependencies]
dioxus = "0.4"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[dependencies]
barcoders = { version = "1.0.2", features = ["svg"] }
dioxus.workspace = true
dioxus-web = "0.4"
futures = "0.3"
getrandom = { version = "0.2.11", features = ["js"] }
gloo = "0.11.0"
hex = "0.4.3"
qrcode = { version = "0.13.0", default-features = false, features = ["svg"] }
qr-scanner = { path = "crates/qr-scanner" }
web-sys = { workspace = true, features = ["Navigator", "Window"] }
dioxus-logger = "0.4.1"
log = "0.4.20"
