[package]
name = "tix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
clap = { version = "4.4.12", features = ["derive", "env"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
indoc = "2.0.4"
lettre = { version = "0.11.3", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "pool", "builder"] }
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "migrate",
  "uuid",
  "time",
] }
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde-human-readable"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
