[package]
name = "tix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.3", features = ["multipart"] }
axum-extra = { version = "0.9.1", features = ["cookie-private"] }
base64 = "0.21.6"
clap = { version = "4.4.12", features = ["derive", "env"] }
csv = "1.3.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
encoding_rs = "0.8.33"
http-cache-reqwest = { version = "0.12.0", default-features = false, features = ["manager-moka"] }
indoc = "2.0.4"
lettre = { version = "0.11.3", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "pool", "builder"] }
once_cell = "1.19.0"
openidconnect = "3.4.0"
rand = "0.8.5"
reqwest = "0.11.23"
reqwest-middleware = "0.2.4"
rust_decimal = { version = "1.33.1", features = ["serde-with-str"] }
rust_decimal_macros = "1.33.1"
serde = { version = "1.0.194", features = ["derive"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "migrate",
  "uuid",
  "time",
] }
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde-human-readable", "macros"] }
time-tz = "2.0.0"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
