[package]
name = "qr-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus.workspace = true
futures = "0.3"
gloo-console = "0.3.0"
gloo-timers = { version = "0.3", features = ["futures"] }
image = { version = "0.24", default-features = false, features = ["png"] }
js-sys = "0.3"
rqrr = "0.6.0"
tokio = { version = "1.35.1", features = ["rt"] }
tracing = { version = "0.1.40", features = ["log"] }
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
  "Blob",
  "Document",
  "Element",
  "HtmlMediaElement",
  "HtmlVideoElement",
  "ImageEncodeOptions",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamTrack",
  "MediaTrackConstraints",
  "MediaTrackSettings",
  "Navigator",
  "OffscreenCanvas",
  "OffscreenCanvasRenderingContext2d",
  "VideoFacingModeEnum",
  "Window",
] }
